# nuefs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  nue.yaml  pixi.toml  pyproject.toml  test_mount.py
docs/: api-design.md
python/nuefs/: __init__.py  __init__.pyi  _nuefs.pyi  builder.py  cli.py  core.py  gitdir.py  lockfile.py  manifest.py  workspace.py
python/nuefs/_nuefs/: __init__.pyi
scripts/: init_manifest.py  setup_test_workspace.py  test_posix_ops.py
src/: client.rs  fuse.rs  lib.rs  manifest.rs  runtime.rs  types.rs
src/daemon/: fuse.rs  manager.rs  mod.rs  server.rs
tests/: test_manifest.py
tests/fixtures/: nue-multi.yaml  nue.yaml
