[package]
name = "nuefs_rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "_nuefs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py39"] }
pyo3-stub-gen = "0.7"
fuser = { version = "0.15", features = ["abi-7-18"] }
libc = "0.2"
thiserror = "2"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
tarpc = { version = "0.35", features = ["tokio1", "serde-transport-bincode", "unix"] }
tokio = { version = "1", features = ["rt", "net", "io-util", "sync", "macros"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "nuefsd"

[[bin]]
name = "stub_gen"
required-features = ["stub"]

[features]
stub = []
