[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "nuefs"
version = "0.1.0"
requires-python = ">=3.12"
description = "NueFS - FUSE-based layered filesystem for Python"
dependencies = ["sheaves"]

[project.scripts]
nuefs = "nuefs.cli:main"

[tool.maturin]
python-source = "python"
module-name = "nuefs._nuefs"
features = ["pyo3/extension-module"]
strip = true
